[tool.poetry]
name = "coding test"
version = "0.1.0"
description = ""
authors = ["pkg0203 <pkg0203@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^24.8.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
